Fixed alignment of mobile nav

--- a/components/global-nav/_global-nav.scss
+++ b/components/global-nav/_global-nav.scss
@@ -7,7 +7,7 @@
 
 	&__items{
 		display: flex;
-		align-items: flex-end;
+    align-items: center;
 	}
 
 	&__logo:not(.btn) {
@@ -20,7 +20,11 @@
 		}
 		&:hover, &:focus{
 			border-bottom-color: transparent;
-		}
+    }
+    
+    @media only screen and (max-width:$tablet) {
+      margin: auto;
+    }
 	}
 
 	&-mini-cart, .mini-cart {
@@ -51,7 +55,12 @@
 		@media only screen and (max-width:$mobile) {
 			order: 3;
 			width: 100vw;
-		}
+    }
+    
+    @media only screen and (max-width:$tablet) {
+      display: initial;
+      order: -1;
+    }
 
 		&__items{
 			display: flex;
@@ -59,6 +68,11 @@
       
       @media only screen and (max-width:$tablet) {
         display: none;
+        background-color: $beige;
+        z-index: 2;
+        position: absolute;
+        left: 0;
+        width: 100%;
       }
 		}
 
@@ -75,7 +89,11 @@
 					text-decoration: none;
 					border-bottom: 2px solid $rose;
 				}
-			}
+      }
+      
+      @media only screen and (max-width:$tablet) {
+        padding-left: $grid-unit * 7;
+      }
     }
     
     .dropdown-toggle {
@@ -83,6 +101,7 @@
 
       &[aria-expanded="true"] + .global-nav__items {
         display: block;
+        padding: 0;
       }
 
       @media only screen and (max-width:$tablet) {
